# bq-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  docker-compose.yml  justfile
.github/workflows/: ci.yml  release.yml
crates/gauth/: Cargo.toml
crates/gauth/src/: lib.rs
crates/gauthenticator/: Cargo.toml  README.md
crates/gauthenticator/src/: credentials.rs  lib.rs  profile.rs  sign.rs  source.rs  token.rs
scripts/: release.sh
src/: api.rs  cli.rs  main.rs  query.rs  query_response.rs  response_factory.rs
test/: insert_statements.sql  load.sh
