[package]
name = "bq-rs"
version = "0.1.1"
edition = "2021"
authors = ["Isaac Adams <isaac.d.adams@gmail.com>"]
license = "MIT OR Apache-2.0"
description = """
A CLI for querying BigQuery tables

Project homepage: https://github.com/isaacadams/bq-rs
"""
homepage = "https://github.com/isaacadams/bq-rs"
repository = "https://github.com/isaacadams/bq-rs"
keywords = ["gcp", "bigquery", "cli"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "bq-rs"
path = "src/main.rs"

[workspace]
members = [ "crates/*" ]

[dependencies]
gauthenticator = { path = "crates/gauthenticator", version = "0.1.1" }
clap = { version = "4.4.8", features = ["derive"] }
ureq = "2.9.0"
serde = {version = "1.0.192", features = ["serde_derive"]}
serde_json = "1.0.108"