[package]
name = "bq-rs"
version = "0.1.7"
edition = "2021"
authors = ["Isaac Adams <isaac.d.adams@gmail.com>"]
license = "MIT OR Apache-2.0"
description = """
A CLI for querying BigQuery tables

Project homepage: https://github.com/isaacadams/bq-rs
"""
homepage = "https://github.com/isaacadams/bq-rs"
repository = "https://github.com/isaacadams/bq-rs"
keywords = ["gcp", "bigquery", "cli"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "bq-rs"
path = "src/main.rs"

[workspace]
members = [ "crates/*" ]

[dependencies]
gauthenticator = { path = "crates/gauthenticator", version = "0.1" }
clap = { version = "4.5.4", features = ["derive"] }
ureq = "2.9"
serde = { version = "1", features = ["serde_derive"] }
serde_json = "1"
log = "0.4"
env_logger = "0.11"
anyhow = "1"
