[package]
name = "gauth"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.22" }
log = "0.4.20"
serde = {version = "1.0.192", features = ["serde_derive"]}
serde_json = "1.0.108"
chrono = { version = "0.4.31", features = ["serde"]}
dotenvy = "0.15.7"
base64 = "0.21.5"
rustls = "0.21.9"
rustls-pemfile = "1.0.4"
thiserror = "1.0.50"
