[package]
name = "gauthenticator"
version = "0.2.1"
edition = "2021"
authors = ["Isaac Adams <crates.io.engine538@passinbox.com>"]
license = "MIT OR Apache-2.0"
description = """
Simple API for authenticating with google services

Project homepage: https://github.com/isaacadams/bq-rs
"""
homepage = "https://github.com/isaacadams/bq-rs"
repository = "https://github.com/isaacadams/bq-rs"
keywords = ["gcp", "google", "authentication"]

[lib]
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
serde = { version = "1", features = ["serde_derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
base64 = "0.22"
rustls = { version = "0.23", default-features = false, features = ["ring", "std"]}
rustls-pemfile = "2.1"
thiserror = "1.0"
ureq = { version = "2.9", features = ["json"] }
toml = "0.8.13"
